# ContextKit

./: core.html  core.html.md  index.html  index.html.md  pyproject.toml  search.json  settings.ini  sitemap.xml
.github/workflows/: test.yaml.off
contextkit/: read.py
nbs/: 00_read.ipynb
