[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="contextkit"
dynamic = ["version"]
description = "Reusable contexts for LLMs"
readme = "README.md"
requires-python=">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Isaac Flath", email = "isaac.flath@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/contextkit"
Documentation = "https://AnswerDotAI.github.io/contextkit"

[project.entry-points.nbdev]
contextkit = "contextkit._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "contextkit.__version__"}

[tool.setuptools.packages.find]
include = ["contextkit"]

[tool.nbdev]
custom_sidebar = false
